(add): adicionando usuarios, serviço de login, tela de filmes, fazendo a comunicacao do servidor e app

--- a/mini-netflix/src/app/show-film/show-film.component.html
+++ b/mini-netflix/src/app/show-film/show-film.component.html
@@ -1,1 +1,11 @@
-<p>show-film works!</p>
+<button class="left-button"><</button>
+<div class="container">
+  <div *ngFor="let item of videos">
+    <img
+      class="film-image"
+      src="{{ item.snippet.thumbnails.medium.url }}"
+      alt=""
+    />
+  </div>
+</div>
+<button class="right-button">></button>
