(add): adicionando prettier e linter

--- a/mini-netflix/src/app/app.component.html
+++ b/mini-netflix/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="container">
-  <!-- <app-login></app-login> -->
-    <app-show-film class="show-film"></app-show-film>
+  <app-navigation class="navigation"></app-navigation>
 </div>
 <router-outlet></router-outlet>
