--- a/mini-netflix/src/app/main-page/main-page.component.html
+++ b/mini-netflix/src/app/main-page/main-page.component.html
@@ -1,1 +1,9 @@
-<p>main-page works!</p>
+<section class="container">
+  <div class="videos-container" *ngFor="let item of videos">
+    <img
+      class="film-image"
+      src="{{ item.snippet.thumbnails.medium.url }}"
+      alt="{{ item.snippet.title }}"
+    />
+  </div>
+</section>
