--- a/mini-netflix/src/app/show-film/show-film.component.html
+++ b/mini-netflix/src/app/show-film/show-film.component.html
@@ -1,11 +1,1 @@
-<button class="left-button"><</button>
-<div class="container">
-  <div *ngFor="let item of videos">
-    <img
-      class="film-image"
-      src="{{ item.snippet.thumbnails.medium.url }}"
-      alt=""
-    />
-  </div>
-</div>
-<button class="right-button">></button>
+<p>Show film work</p>
