--- a/mini-netflix/src/styles.scss
+++ b/mini-netflix/src/styles.scss
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap');
+
 * {
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 body {
+  margin: 0;
+  padding: 0;
   background-color: #141414;
 }
