(add|feat|refactor): adicionando responsividade no menu, melhorando codigo de rotas, adicionando estrutura das telas

--- a/mini-netflix/src/app/login/login.component.html
+++ b/mini-netflix/src/app/login/login.component.html
@@ -1,20 +1,6 @@
-<div class="container">
-  <div class="logo">Login</div>
-  <div class="login-item">
-    <form class="form form-login">
-      <div class="form-field">
-        <label class="user" for="login-email"><span class="hidden">Email</span></label>
-        <input name="email" id="login-email" type="email" class="form-input" placeholder="Email" required ngModel>
-      </div>
-
-      <div class="form-field">
-        <label class="lock" for="login-password"><span class="hidden">Password</span></label>
-        <input name="password" id="login-password" type="password" class="form-input" placeholder="Password" required ngModel>
-      </div>
-
-      <div class="form-field">
-        <input type="submit" value="Login">
-      </div>
-    </form>
+<section class="container">
+  <div class="user" *ngFor="let user of users">
+      <img (click)="login(user.id)" class="user-icon" src="../../assets/user1.png" alt="">
+      <p>{{ user.name }}</p>
   </div>
-</div>
+</section>
