--- a/mini-netflix/src/app/main-page/main-page.component.scss
+++ b/mini-netflix/src/app/main-page/main-page.component.scss
@@ -6,6 +6,12 @@
   margin-bottom: 20px;
 }
 
-.film-image {
-  margin-right: 3px;
+.banner {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 0.2em;
+}
+
+.videos-container {
+  margin: 0.2em;
 }
