--- a/mini-netflix/src/app/metrics/metrics.component.html
+++ b/mini-netflix/src/app/metrics/metrics.component.html
@@ -1,1 +1,21 @@
-<p>metrics works!</p>
+<section class="container">
+  <h2>Metrics</h2>
+  <h3>Se the most popular films</h3>
+  <div>
+    <div>
+      <h4>Most popular</h4>
+    </div>
+    <div>
+      <h4>Horror</h4>
+    </div>
+    <div>
+      <h4>Adventure</h4>
+    </div>
+    <div>
+      <h4>Romantic Comedy</h4>
+    </div>
+    <div>
+      <h4>Originals</h4>
+    </div>
+  </div>
+</section>
