--- a/mini-netflix/src/app/profile/profile.component.html
+++ b/mini-netflix/src/app/profile/profile.component.html
@@ -1,1 +1,25 @@
-<p>profile works!</p>
+<section class="container">
+  <div class="user-profile">
+    <img src="../../assets/user1.png" alt="User Icon">
+    <!-- <p>Nome: {{ user.name }}</p>
+    <p>Email: {{ user.email }}</p>
+    <p>Favourites Films: </p>
+    <ul>
+      <li>
+        {{user.favFilms[0]}}
+      </li>
+      <li>
+        {{user.favFilms[1]}}
+      </li>
+      <li>
+        {{user.favFilms[2]}}
+      </li>
+      <li>
+        {{user.favFilms[3]}}
+      </li>
+      <li>
+        {{user.favFilms[4]}}
+      </li>
+    </ul> -->
+  </div>
+</section>
