--- a/mini-netflix/src/app/navigation/navigation.component.scss
+++ b/mini-netflix/src/app/navigation/navigation.component.scss
@@ -5,7 +5,7 @@
   width: 100%;
   background-color: rgba(12, 12, 12, 0.5);
   h1 {
-    color: red;
+    color: #d81f26;
     cursor: pointer;
     padding-left: 0.5em;
   }
