--- a/mini-netflix/src/app/login/login.component.scss
+++ b/mini-netflix/src/app/login/login.component.scss
@@ -1,28 +1,67 @@
+h2 {
+  color: #d81f26;
+  margin: 1em;
+}
+
 .container {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
   height: 90vh;
-  color: white
+  width: 100%;
 }
 
-.user {
+.logo {
+  width: 25em;
+  height: 10em;
+}
+
+.login-form {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  width: 50%;
+  input {
+    width: 100%;
+    height: 2em;
+    margin: 1em;
+    padding-left: .2em;
+    border-radius: .2em;
+  }
+  button {
+    color: white;
+    font-size: 1em;
+    background-color: #d81f26;
+    align-self: flex-start;
+    width: 5em;
+    height: 2em;
+    border-radius: .2em;
+    cursor: pointer;
+    transition: .5s;
+    &:hover {
+      transition: .5s;
+      background-color: #ad191e;
+    }
+  }
 }
 
-.user-icon {
-  width: 10em;
-  height: 10em;
-  border-radius: .3em;
-  margin: 2em;
-  border: solid 2px rgba(255, 255, 255, 0.1);
-  &:hover {
-    border: solid 2px rgba(255, 255, 255, 0.8);
-    transform: translateY(-3px) scale(1.1);
+@media screen and (min-width: 768px) {
+  .login-form {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .login-form {
+    width: 30%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .logo {
+    width: 15em;
+    height: 10em;
   }
 }
