--- a/mini-netflix/src/app/main-page/main-page.component.scss
+++ b/mini-netflix/src/app/main-page/main-page.component.scss
@@ -1,17 +1,50 @@
 .container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
   margin-bottom: 20px;
+  color: white;
 }
 
 .banner {
   width: 100%;
   height: 100%;
-  margin-bottom: 0.2em;
+  margin-bottom: .2em;
+}
+
+h4 {
+  padding: 1em
 }
 
 .videos-container {
-  margin: 0.2em;
+  width: 100%;
+  display: flex;
+  overflow-x: auto;
+  overflow-y: hidden;
+  img {
+    margin-right: .1em;
+    transition: .3s ease-in-out;
+    cursor: pointer;
+    &:hover {
+      transition: .2s;
+      transform: scale(1.2);
+    }
+  }
+}
+
+.videos-container::-webkit-scrollbar {
+  height: 5px;
+}
+
+.videos-container::-webkit-scrollbar-thumb {
+  background: red; 
+  border-radius: 10px;
+}
+
+.videos-container::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+}
+
+
+@media screen and (max-width: 600px) {
+  .videos-container::-webkit-scrollbar {
+    display: none;
+  }
 }
