--- a/mini-netflix/src/app/metrics/metrics.component.html
+++ b/mini-netflix/src/app/metrics/metrics.component.html
@@ -1,21 +1,14 @@
 <section class="container">
-  <h2>Metrics</h2>
-  <h3>Se the most popular films</h3>
-  <div>
-    <div>
-      <h4>Most popular</h4>
-    </div>
-    <div>
-      <h4>Horror</h4>
-    </div>
-    <div>
-      <h4>Adventure</h4>
-    </div>
-    <div>
-      <h4>Romantic Comedy</h4>
-    </div>
-    <div>
-      <h4>Originals</h4>
+  <h2 class="title">Metrics</h2>
+  <h3 class="subtitle">Se the most popular films</h3>
+  <div class="categorie" *ngFor="let categorie of categories">
+    <h4>{{categorie.title}}</h4>
+    <div class="videos-metrics">
+      <img
+        *ngFor="let video of videos"
+        src="{{ video.snippet.thumbnails.medium.url }}"
+        alt="Video image"
+      />
     </div>
   </div>
 </section>
