--- a/mini-netflix/src/styles.scss
+++ b/mini-netflix/src/styles.scss
@@ -2,10 +2,12 @@
 
 * {
   font-family: 'Roboto Condensed', sans-serif;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  box-sizing: border-box
 }
 
 body {
-  margin: 0;
-  padding: 0;
   background-color: #141414;
 }
