--- a/mini-netflix/src/app/profile/profile.component.scss
+++ b/mini-netflix/src/app/profile/profile.component.scss
@@ -19,7 +19,7 @@
     width: 15em;
     height: 15em;
     margin-top: 1em;
-    border-radius: .5em;
+    border-radius: 10em;
   }
   ul {
     padding: 1em;
