--- a/mini-netflix/src/app/navigation/navigation.component.html
+++ b/mini-netflix/src/app/navigation/navigation.component.html
@@ -4,4 +4,5 @@
   <a routerLink="main-page">Home</a>
   <a routerLink="profile">Profile</a>
   <a routerLink="metrics">Metrics</a>
+  <a (click)="logout()">Logout</a>
 </nav>
