--- a/mini-netflix/src/app/show-video/show-video.component.html
+++ b/mini-netflix/src/app/show-video/show-video.component.html
@@ -1,11 +1,13 @@
-<ng-template [ngIf]="modalState">
-  <div class="overlay" [style.display]="closeModal ? 'none' : 'block'">
+<ng-template [ngIf]="closeModal">
+  <div class="overlay" [style.display]="closeModal ? 'block' : 'none'">
     <div class="modal">
-      <button (click)="close()">&#x2715;</button>
+      <button (click)="toggleModal()">&#x2715;</button>
       <iframe
         width="100%"
         height="500"
-        src="url{{videoId}}"
+        [src]="sendUrl(videoId)"
+        webkitallowfullscreen
+        mozallowfullscreen
         allowfullscreen
       ></iframe>
     </div>
