--- a/mini-netflix/src/app/main-page/main-page.component.html
+++ b/mini-netflix/src/app/main-page/main-page.component.html
@@ -5,13 +5,14 @@
     alt="New series banner"
   />
   <div *ngFor="let categorie of categories">
-    <h4 (click)="toggleModal()">{{ categorie.title }}</h4>
+    <h4>{{ categorie.title }}</h4>
     <div class="videos-container">
       <div *ngFor="let video of videos">
         <img
           class="film-image"
           src="{{ video.snippet.thumbnails.medium.url }}"
           alt="{{ video.snippet.title }}"
+          (click)="toggleModal()"
         />
       </div>
     </div>
