--- a/mini-netflix/src/app/profile/profile.component.scss
+++ b/mini-netflix/src/app/profile/profile.component.scss
@@ -1,31 +1,48 @@
 .container {
-  background-color: whitesmoke;
+  background-color: #ddd;
   height: 100vh;
   width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .user-profile {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
   p {
     margin: .5em;
+    font-size: 1.2em;
   }
-  img {
-    width: 15em;
-    height: 15em;
+  .user-icon {
     margin-top: 1em;
-    border-radius: 10em;
+    width: auto;
+    height: 90vh;
+    img {
+      width: 15em;
+      height: 15em;
+      border-radius: 2em;
+      margin-right: 1em;
+    }
   }
   ul {
     padding: 1em;
   }
   li {
     list-style: none;
+    font-size: 1.2em;
+  }
+  .user-info {
+    border-radius: .5em;
+    margin-top: 1em;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    width: 50vw;
+    height: 90vh;
+    background-color: #ccc;
   }
 }
 
@@ -33,8 +50,43 @@
   .container {
     padding-bottom: .2em;
   }
-  img {
-    width: 10em !important;
-    height: 10em !important;
+  .user-profile {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    p {
+      margin: .5em;
+      font-size: 1.2em;
+    }
+    .user-icon {
+      margin-top: 1em;
+      width: auto;
+      height: auto;
+      img {
+        width: 10em;
+        height: 10em;
+        border-radius: 10em;
+        align-self: center;
+      }
+    }
+    ul {
+      padding: 1em;
+    }
+    li {
+      list-style: none;
+      font-size: 1.2em;
+    }
+    .user-info {
+      border-radius: .5em;
+      margin-top: 1em;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: column;
+      width: 70vw;
+      height: 60vh;
+      background-color: #ccc;
+    }
   }
 }
