(reafactor): melhorando readme, ajustando arquivos com tslint

--- a/mini-netflix/src/app/main-page/main-page.component.html
+++ b/mini-netflix/src/app/main-page/main-page.component.html
@@ -12,7 +12,7 @@
           class="film-image"
           src="{{ video.snippet.thumbnails.medium.url }}"
           alt="{{ video.snippet.title }}"
-          (click)="toggleModal()"
+          (click)="toggleModal(video.id.videoId)"
         />
       </div>
     </div>
