--- a/mini-netflix/src/app/navigation/navigation.component.html
+++ b/mini-netflix/src/app/navigation/navigation.component.html
@@ -2,7 +2,7 @@
   <h1>Netflix</h1>
   <a class="icon fa fa-bars" (click)="toggleMenu()"></a>
   <a routerLink="main-page">Home</a>
-  <a routerLink="profile">Profile</a>
-  <a routerLink="metrics">Metrics</a>
+  <a routerLink="profile">Perfil</a>
+  <a routerLink="metrics">Metricas</a>
   <a (click)="logout()">Logout</a>
 </nav>
