--- a/mini-netflix/src/app/show-video/show-video.component.scss
+++ b/mini-netflix/src/app/show-video/show-video.component.scss
@@ -22,7 +22,7 @@
   top: 0;
   left: 0;
   z-index: 99;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgb(0, 0, 0);
   width: 100%;
   height: 100%;
 }
@@ -30,5 +30,8 @@
 @media screen and (max-device-width : 640px) {
   .modal {
     top: 10px;
+    button {
+      font-size: 2em;
+    }
   }
 }
